Add footnote plugin to VuePress

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs"
+  },
+  "dependencies": {
+    "markdown-it-footnote": "^3.0.2"
   }
 }
